--- a/motb-reporting.ipynb
+++ b/motb-reporting.ipynb
@@ -1555,9 +1555,7 @@
     "pledge_detail_bal = pledge_balances_detail(pledges_df)\n",
     "unfulfilled_2024 = pledge_detail_bal[pledge_detail_bal[\"balance_2024\"] > 0].sort_values([\"pledge_group\", \"balance_2024\"], ascending=[False, False])\n",
     "unfulfilled_2025 = pledge_detail_bal[pledge_detail_bal[\"balance_2025\"] > 0].sort_values([\"pledge_group\", \"balance_2025\"], ascending=[False, False])\n",
-    "\n",
-    "print(\"2024 Unfulfilled (top 15)\"); display(unfulfilled_2024.head(15))\n",
-    "print(\"2025 Unfulfilled (top 15)\"); display(unfulfilled_2025.head(15))\n"
+    "\n"
    ]
   },
   {
@@ -2308,8 +2306,7 @@
     "            \"match_strength\": \"STRONG\" if (det[\"email_match\"] or det[\"phone_match\"] or det[\"name_score\"]>=90) else \"WEAK\"\n",
     "        })\n",
     "\n",
-    "potential_matches_df = pd.DataFrame(potential_matches)\n",
-    "potential_matches_df.sort_values([\"match_strength\",\"match_name_score\"], ascending=[False, False]).head(25)\n"
+    "potential_matches_df = pd.DataFrame(potential_matches)\n"
    ]
   },
   {
