rename df column headers

--- a/motb-reporting.ipynb
+++ b/motb-reporting.ipynb
@@ -863,9 +863,9 @@
     "\n",
     "        rows.append({\n",
     "            \"region\": r[\"region\"],\n",
-    "            \"c2024\": c2024,\n",
-    "            \"c2025\": c2025,\n",
-    "            \"ctotal\": total\n",
+    "            \"commitment_2024\": c2024,\n",
+    "            \"commitment_2025\": c2025,\n",
+    "            \"commitment_total\": total\n",
     "        })\n",
     "    out = pd.DataFrame(rows)\n",
     "    if out.empty:\n",
@@ -874,7 +874,7 @@
     "    agg = out.groupby(\"region\", dropna=False, as_index=False).sum(numeric_only=True)\n",
     "\n",
     "    # 70/30 split\n",
-    "    for col in [\"c2024\", \"c2025\", \"ctotal\"]:\n",
+    "    for col in [\"commitment_2024\", \"commitment_2025\", \"commitment_total\"]:\n",
     "        agg[f\"{col}_restricted\"] = agg[col] * 0.70\n",
     "        agg[f\"{col}_unrestricted\"] = agg[col] * 0.30\n",
     "    return agg\n",
@@ -1097,9 +1097,9 @@
     "\n",
     "        rows.append({\n",
     "            \"region\": p[\"region\"],\n",
-    "            \"b2024\": b2024,\n",
-    "            \"b2025\": b2025,\n",
-    "            \"btotal\": btotal\n",
+    "            \"balance_2024\": b2024,\n",
+    "            \"balance_2025\": b2025,\n",
+    "            \"balance_total\": btotal\n",
     "        })\n",
     "\n",
     "    out = pd.DataFrame(rows)\n",
@@ -1107,7 +1107,7 @@
     "        return out\n",
     "\n",
     "    agg = out.groupby(\"region\", dropna=False, as_index=False).sum(numeric_only=True)\n",
-    "    for col in [\"b2024\", \"b2025\", \"btotal\"]:\n",
+    "    for col in [\"balance_2024\", \"balance_2025\", \"balance_total\"]:\n",
     "        agg[f\"{col}_restricted\"] = agg[col] * 0.70\n",
     "        agg[f\"{col}_unrestricted\"] = agg[col] * 0.30\n",
     "    return agg\n",
