--- a/motb-reporting.ipynb
+++ b/motb-reporting.ipynb
@@ -182,6 +182,7 @@
     "G25_CLASS = \"dropdown66\"\n",
     "G25_PREF = \"dropdown8\"\n",
     "G25_SOLIC = \"dropdown58\"\n",
+    "G25_CHECK = \"boolean_mkw54d42\"\n",
     "\n",
     "GIFTS25_COLS = [G25_LINKED_DONOR, G25_LINKED_SOFT_CREDIT, G25_AMOUNT, G25_GL, G25_CLASS, G25_PREF, G25_SOLIC]\n",
     "\n",
@@ -195,6 +196,7 @@
     "GOLD_CLASS = \"dropdown66\"\n",
     "GOLD_PREF = \"dropdown8\"\n",
     "GOLD_SOLIC = \"dropdown58\"\n",
+    "GOLD_CHECK= \"boolean_mkw5kcdd\"\n",
     "\n",
     "GIFTSOLD_COLS = [GOLD_LINKED_DONOR, GOLD_LINKED_SOFT_CREDIT, GOLD_AMOUNT, GOLD_GL, GOLD_CLASS, GOLD_PREF, GOLD_SOLIC]\n",
     "\n",
