--- a/motb-reporting.ipynb
+++ b/motb-reporting.ipynb
@@ -184,7 +184,7 @@
     "G25_SOLIC = \"dropdown58\"\n",
     "G25_CHECK = \"boolean_mkw54d42\"\n",
     "\n",
-    "GIFTS25_COLS = [G25_LINKED_DONOR, G25_LINKED_SOFT_CREDIT, G25_AMOUNT, G25_GL, G25_CLASS, G25_PREF, G25_SOLIC]\n",
+    "GIFTS25_COLS = [G25_LINKED_DONOR, G25_LINKED_SOFT_CREDIT, G25_AMOUNT, G25_GL, G25_CLASS, G25_PREF, G25_SOLIC, G25_CHECK]\n",
     "\n",
     "# 2012-24 Gifts board (3782496456)\n",
     "GOLD_NAME = \"name\"\n",
@@ -198,7 +198,7 @@
     "GOLD_SOLIC = \"dropdown58\"\n",
     "GOLD_CHECK= \"boolean_mkw5kcdd\"\n",
     "\n",
-    "GIFTSOLD_COLS = [GOLD_LINKED_DONOR, GOLD_LINKED_SOFT_CREDIT, GOLD_AMOUNT, GOLD_GL, GOLD_CLASS, GOLD_PREF, GOLD_SOLIC]\n",
+    "GIFTSOLD_COLS = [GOLD_LINKED_DONOR, GOLD_LINKED_SOFT_CREDIT, GOLD_AMOUNT, GOLD_GL, GOLD_CLASS, GOLD_PREF, GOLD_SOLIC, GOLD_CHECK]\n",
     "\n",
     "# Donor board (3782435039)\n",
     "D_EMAIL = \"email\"\n",
