--- a/motb-reporting.ipynb
+++ b/motb-reporting.ipynb
@@ -294,28 +294,9 @@
     "\n",
     "def get_phone(cv):\n",
     "    return (cv or {}).get(\"phone\") or (cv or {}).get(\"text\")\n",
-    "def get_checkbox_bool(cv):\n",
-    " """\n",
-    " monday.com checkbox -> True/False/None\n",
-    " Supports typed {"checked": bool} or generic {"value": '{"checked":"true"}', "text": ""}\n",
-    " """\n",
-    " if not cv:\n",
-    " return None\n",
-    " if isinstance(cv, dict) and "checked" in cv:\n",
-    " return bool(cv["checked"])\n",
-    " v = cv.get("value") if isinstance(cv, dict) else None\n",
-    " if v:\n",
-    " try:\n",
-    " data = json.loads(v) if isinstance(v, str) else v\n",
-    " val = data.get("checked")\n",
-    " if isinstance(val, bool):\n",
-    " return val\n",
-    " if isinstance(val, str):\n",
-    " return val.lower() == "true"\n",
-    " except Exception:\n",
-    " pass\n",
-    " txt = cv.get("text") if isinstance(cv, dict) else None\n",
-    " return (txt or "").strip() != ""\n"
+    "def get_checkbox(cv):\n",
+    "    val = (cv or {}).get('checked', (json.loads((cv or {}).get('value')) if isinstance((cv or {}).get('value'), str) else (((cv or {}).get('value')) or {})).get('checked', ((cv or {}).get('text') or '').strip()))\n",
+    " return None if not cv else (val if isinstance(val, bool) else (str(val).lower() == 'true'))\n",
    ]
   },
   {
