--- a/motb-reporting.ipynb
+++ b/motb-reporting.ipynb
@@ -391,6 +391,7 @@
     "        cls = get_dropdown_text(cv.get(G25_CLASS if is_2025 else GOLD_CLASS))\n",
     "        pref = get_dropdown_text(cv.get(G25_PREF if is_2025 else GOLD_PREF))\n",
     "        solic = get_dropdown_text(cv.get(G25_SOLIC if is_2025 else GOLD_SOLIC))\n",
+    "        check = get_checkbox(cv.get(G25_CHECK if is_2025 else GOLD_CHECK))\n",
     "        rows.append({\n",
     "            \"gift_id\": int(it[\"id\"]),\n",
     "            \"name\": it[\"name\"],\n",
@@ -402,6 +403,7 @@
     "            \"class\": cls,\n",
     "            \"gift_preference\": pref,\n",
     "            \"solicitation\": solic,\n",
+    "            \"checkbox\": check,\n",
     "            \"board\": \"2025 Gifts\" if is_2025 else \"2012-24 Gifts\",\n",
     "        })\n",
     "    return pd.DataFrame(rows)\n",
