--- a/motb-reporting.ipynb
+++ b/motb-reporting.ipynb
@@ -2237,7 +2237,7 @@
     "    if isinstance(ids, list):\n",
     "        linked_gift_ids_all.update(ids)\n",
     "\n",
-    "unlinked_gifts = all_gifts_df[~all_gifts_df[\"gift_id\"].isin(linked_gift_ids_all)].copy()\n",
+    "unlinked_gifts = all_gifts_df[~all_gifts_df["gift_id"].isin(linked_gift_ids_all) & ~all_gifts_df["checkbox"].astype(str).str.lower().eq("true")].copy()\n",
     "\n",
     "# Build pledge quick-lookup structures\n",
     "pledge_contacts = pledges_df[[\n",
