--- a/motb-reporting.ipynb
+++ b/motb-reporting.ipynb
@@ -2300,6 +2300,7 @@
     "            \"gift_amount\": g[\"amount\"],\n",
     "            \"gift_gl\": g[\"gl_account\"],\n",
     "            \"gift_group\": g[\"group_title\"],\n",
+    "            \"checked\": g[\"check\"],\n",
     "            \"donor_name\": drec.get(\"donor_name\"),\n",
     "            \"donor_email\": drec.get(\"email\"),\n",
     "            \"donor_phone\": drec.get(\"phone\"),\n",
