--- a/motb-reporting.ipynb
+++ b/motb-reporting.ipynb
@@ -296,8 +296,7 @@
     "    return (cv or {}).get(\"phone\") or (cv or {}).get(\"text\")\n",
     "\n",
     "def get_checkbox(cv):\n",
-    "    val = (cv or {}).get('checked', (json.loads((cv or {}).get('value')) if isinstance((cv or {}).get('value'), str) else (((cv or {}).get('value')) or {})).get('checked', ((cv or {}).get('text') or '').strip()))\n",
-    "    return None if not cv else (val if isinstance(val, bool) else (str(val).lower() == 'true'))\n"
+    "    return = (cv or {}).get(\"checked\") or (cv or {}).get(\"text\")\n"
    ]
   },
   {
