--- a/motb-reporting.ipynb
+++ b/motb-reporting.ipynb
@@ -296,7 +296,7 @@
     "    return (cv or {}).get(\"phone\") or (cv or {}).get(\"text\")\n",
     "\n",
     "def get_checkbox(cv):\n",
-    "    return = (cv or {}).get(\"checked\") or (cv or {}).get(\"text\")\n",
+    "    return (cv or {}).get(\"checked\") or (cv or {}).get(\"text\")\n"
    ]
   },
   {
