update via upload

--- a/motb-reporting.ipynb
+++ b/motb-reporting.ipynb
@@ -830,6 +830,12 @@
     }
    ],
    "source": [
+    "all_gifts_df = pd.concat([gifts25_df, gifts_old_df], ignore_index=True)\n",
+    "gift_amount_by_id = dict(zip(all_gifts_df[\"gift_id\"], all_gifts_df[\"amount\"]))\n",
+    "gift_gl_by_id = dict(zip(all_gifts_df[\"gift_id\"], all_gifts_df[\"gl_account\"]))\n",
+    "gift_group_by_id = dict(zip(all_gifts_df[\"gift_id\"], all_gifts_df[\"group_title\"]))\n",
+    "gift_mapped_class_by_id = dict(zip(all_gifts_df[\"gift_id\"], all_gifts_df[\"mapped_class\"]))\n",
+    "\n",
     "def summarize_region_gifts(pledges_df):\n",
     "    rows = []\n",
     "    for _, p in pledges_df.iterrows():\n",
