--- a/motb-reporting.ipynb
+++ b/motb-reporting.ipynb
@@ -1979,7 +1979,7 @@
    ],
    "source": [
     "# A) Region revenue breakdown from linked gifts\n",
-    "region_rev_breakdown.sort_values([\"region\",\"bucket\"])\n"
+    "region_rev_breakdown.sort_values([\"region\"])\n"
    ]
   },
   {
